<resources>
    <string name="app_name">CleanSori</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Welcome!</string>
    <string name="text_view_login">Inicia sesión</string>
    <string name="text_view_login_description">Ingresa tu correo y contraseña</string>
    <string name="image_view_content_description_profile">Perfil</string>
    <string name="edit_text_email_hint">Correo</string>
    <string name="edit_text_password_hint">Contraseña</string>
    <string name="button_login_text">Iniciar sesión</string>
</resources>
